# hiratakebot

./: .gitignore  Cargo.toml
examples/: add_text.rs  others_examples.rs  pin_a_message.rs  ping_pong.rs  primitive_slash_command.rs  regularly_say.rs  say_to_channel.rs  send_files.rs  send_message_regularly.rs  smart_slash_command.rs  unpin_a_message.rs
src/: http_server.rs  main.rs  spreadsheet.rs
