[package]
name = "hiratakebot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http"] }
shuttle-runtime = "0.52.0"
shuttle-serenity = "0.52.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.37"
poise = "0.6"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
chrono = "0.4"
regex = "1.9.1"
# unicode-segmentation = "1.10.0"
axum = "0.8.1"
